[package]
name = "qr-scanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.53.1"
quirc = "0.0.1"
show-image = { version = "0.9.2", features = ["image"] }
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
font-loader = "0.11.0"
